# home_assist

./: .gitignore  .tool-versions  AGENTS.md  nomad-migration-plan.md
bt_track/: AGENTS.md  devices.txt
bt_track/.claude/: settings.local.json
bt_track/esphome/: ble-scanner-bathroom.yaml  ble-scanner-carport.yaml  ble-scanner-kitchen.yaml  ble-scanner-livingroom.yaml  ble-scanner.yaml
bt_track/esphome/.claude/: settings.local.json
bt_track/wbr1_flash/: OpenBK7231N_1.18.236.rbl
devices/ble-scanners/: README.md  ble-scanner-bedroom.yaml
devices/ble-thermometers/: README.md
devices/della-minisplits/: .gitignore  ESPHOME_SETUP.md  README.md  SETUP.md  amos-minisplit.yaml  build-firmware.sh  della-ac.yaml  openbeken-heat-cool.patch  packet-loss-test.sh
devices/della-minisplits/firmware/: OpenRTL87X0C_1.18.244_heat_cool_ota.img
devices/ecobee/: ECB701_HEAT_PUMP_WIRING.md  ECB701_WIRING_ISSUES.md  README.md  VERIFY_CENTRAL_AIR_WIRING.md
devices/irrigation/: README.md
devices/irrigation/outdoor/: .gitignore  WIRING.md  irrigation-outdoor.yaml
devices/resphome-test/firmware/: .embuild  Cargo.toml
devices/resphome-test/firmware/src/: main.rs
devices/status-display/: README.md
devices/status-display/firmware/: .gitignore  Cargo.toml  ota_flash.py  partitions.csv  sdkconfig.defaults
devices/status-display/firmware/.cargo/: config.toml
devices/status-display/firmware/src/: api.rs  backlight.rs  ha.rs  main.rs  ota.rs  proto.rs  slots.rs  state.rs  touch.rs  ui.rs
esphome/common/: base.yaml  wifi_stable.yaml
fleet/: README.md  ansible.cfg
fleet/archiso/: build.sh  packages.x86_64  profiledef.sh
fleet/group_vars/: all.yml  compute.yml  storage.yml
fleet/host_vars/: example-node.yml  node-1.yml  node-2.yml  node-3.yml
fleet/inventory/: hosts.yml
fleet/monitoring/: moosefs-poller.py
fleet/nomad/home-automation/: homeassistant.nomad.hcl  matter-server.nomad.hcl
fleet/playbooks/: blockyard-restart.yml  blockyard-wipe-raft.yml  deploy-blockyard.yml  site.yml  upgrade.yml
home-assistant/: README.md  automations_hvac.yaml  automations_irrigation.yaml  ha-download.sh  ha-upload.sh  input_helpers.yaml  input_text_bb_status.yaml  mqtt.yaml  zones.yaml
home-assistant/ha-config-snapshot/: automations.yaml  configuration.yaml  input_boolean.yaml  input_number.yaml  input_select.yaml  scripts.yaml
home-assistant/pyscript/: hvac_control.py
libs/CORE-ESP32/: CORE-ESP32-C3.kicad_sym  README.md
libs/ha-display-kit/: Cargo.toml
libs/resphome/: Cargo.toml
libs/resphome/src/: api.rs  ble.rs  device.rs  entity.rs  lib.rs  ota.rs  proto.rs  sensor.rs  wifi.rs
tools/bb-status-reporter/: bb-status-reporter.sh
(+82 files in other folders)
